# farseer

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  MANIFEST.in  QUICK_REFERENCE.txt  README.md  build_prophet_model.sh  farseer_performance_showcase.ipynb  prophet_seer_comparison.ipynb  prophet_seer_comparison_100k.ipynb  pyproject.toml  test_deployment.sh
.github/: copilot-instructions.md
.github/workflows/: build-stan-binaries.yml  ci.yml  deploy-pages.yml  release.yml
benches/: autodiff_vs_stan.rs
benchmarks/: README.md  visual_comparison.py
docs/: 404.html  README.md  _config.yml  api-reference.html  examples.html  index.html  migration.html  quickstart.html  script.js  styles.css
examples/: advanced_features.py  basic_forecast.py  compile_stan_model.rs.backup  custom_seasonality.py  farseer_performance_showcase.ipynb  manual_changepoints_demo.py  multi_series_demo.py  multiple_frequencies.py  multithreaded_stan.py  quickstart.py  regressor_demo.py  regressor_example.py  test_bridgestan.rs  test_nightly_autodiff.rs  weighted_timeseries_example.py
farseer/: __init__.py  utilities.py
prophet_stan_model/: libtbbmalloc_proxy.so.2  prophet_model
python/: README.md
python/seer/: __init__.py  test_m3.py  test_m4.py  test_m5.py  test_m6_integration.py  test_m7_frequencies.py  test_m7_stan.py  test_seer.py
rust_tests/: integration_tests.rs
scripts/: validate_autodiff.sh
seer/: __init__.py  __init__.py.bak
src/: lib.rs
src/core/: cmdstan_optimizer.rs  data.rs  mod.rs  model.rs  prophet_autodiff.rs  prophet_nightly_ad.rs  prophet_optimizer.rs  seasonality.rs  stan.rs  trend.rs
stan/: README.md  libtbb.so.2  prophet  prophet.stan  prophet_model
stan/linux/: libtbbmalloc.so.2
stan/macos/: README.md
tests/: core_m1_tests.rs  integration_tests.rs  test_autodiff.rs  test_conditional_seasonality.py  test_diagnostics.py  test_ds_column.py  test_gradient_validation.rs  test_holiday_priors.py  test_multi_series.py  test_multi_series_integration.py  test_output_schema.py  test_polars_conversion.py  test_prophet_compatibility.py  test_python_api.py  test_regressors.py  test_rust.rs  test_scaling.py  test_scaling_debug.rs  test_utilities.py  test_weights.py
