[package]
name = "farseer"
version = "0.1.0"
edition = "2021"
description = "A high-performance time series forecasting library with Prophet-compatible API"
license = "GPL-3.0-or-later"
repository = "https://github.com/ryanbieber/seer"
homepage = "https://github.com/ryanbieber/seer"
documentation = "https://github.com/ryanbieber/seer"
authors = ["Ryan Bieber"]
keywords = ["forecasting", "time-series", "prophet", "statistics"]
categories = ["science", "algorithms"]

[lib]
name = "farseer"
crate-type = ["cdylib", "rlib"]  # cdylib for Python, rlib for Rust

[dependencies]
# Core dependencies
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
chrono = "0.4"
tempfile = "3.0"

# Python bindings
pyo3 = { version = "0.26", features = ["extension-module"] }
numpy = "0.26"  # For numpy array conversion

[package.metadata.maturin]
name = "farseer"

[dev-dependencies]

# Integration tests
[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

# Maturin will use this for building Python wheels
[build-dependencies]
pyo3-build-config = "0.22"
